k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urlshortner
  labels:
    name: urlshortner
    environment: production
    project: urlshortner-microservices
